# pokeapi_demo

./: README.md  pyproject.toml
poke_api/: main.py
tests/: test_main.py
