[tool.poetry]
name = "poke-api"
version = "0.1.0"
description = ""
authors = ["Erik Tastepe <erik.tastepe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-mock = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
